style.css
/* ... */
.blocks_text h5{
    margin: 0;
    font-size: 24px;
    line-height: 32px;
    font-family: 'Poppins', sans-serif;
    color: white;
}
.blocks_text p{
    font-size: 16px;
    line-height: 24px;
    color: white;
    font-family: 'Nanum Gothic', sans-serif;
}
#glass{
    width: 550px;
    position: absolute;
    z-index: 5;
}
#frame{
    width: 275px;
    position: absolute;
    top: 0;
    left:550px
}
#icecream{
    width: 275px;
    position: absolute;
    bottom: 0;
    left:550px
}
#head{
    width: 340px;
    position: absolute;
    top: 0;
    right: 184px;
}
#bilding{
    width: 184px;
    position: absolute;
    right: 0;
    top: 0;
    z-index: 5;
}
#hren{
    width: 184px;
    position: absolute;
    right: 0;
    bottom: 210px;
}
#dron{
    width: 524px;
    height: 210px;
    position: absolute;
    right: 0;
    bottom: 0;
}



#plus{
    height: 300px;
    background-color: rgba(48, 35, 174, 1);
    padding: 96px 11% 30px;
}
.plus_block{
    display: flex;
    justify-content: space-between;
    color: white;
}
.plus_cards{
    margin-right: 2%;
}
.plus_cards img{
    margin-bottom: 25px;
}
.plus_cards p{
    margin: 10px 0 0;
    font-size: 16px;
    line-height: 24px;
}
.plus_cards h6{
    margin: 0;
    font-family: 'Poppins', sans-serif;
    font-size: 24px;
    line-height: 32px;
}


#messege{
    padding: 100px 11% ;
}
.messege_block{
    display: flex;
    margin-bottom: 60px;
}
.messege_block h6{
    font-family: 'Poppins', sans-serif;
    font-size: 16px;
    line-height: 24px;
    margin: 0 0 18px;
}
.messege_block h2{
    font-size: calc(1.475rem + 2.7vw);
    line-height: 64px;
    margin: 0 0 32px;
}
.messege_block p{
    margin-bottom: 32px;
}
.messege_block div:first-of-type{
    position: relative;
}
.messege_block div:last-of-type{
    z-index: 10;
    padding-left: 650px;
    padding-top: 60px;
}
.messege_block img:first-of-type{
    z-index: 10;
    top: -22px;
    left: 22px;
}
.messege_block img{
    position: absolute;
    width: 500px;
    height: 474px;
}


#mobile{
    padding: 60px 11%;
    position: relative;
    background-image: url(./picture/mobile/BG.png);
}
.mobile_block{
    position: relative;
}
.mobile_block>div h2{
    font-size: calc(1.475rem + 2.7vw);
    max-width: 50%;
    margin: 0 0 30px;
    color: white;
}
.mobile_block>div p{
    max-width: 55%;
    color: white;
    margin-bottom: 50px;
}
.mobile_block>div:first-of-type{
    padding-top: 20%;
}
.mobile_block>div .mobile_buttons{
    display: flex;
    margin-bottom: 145px;
}
.mobile_phone img:first-of-type{
    position: absolute;
    top: 10%;
    right: 17%;
    z-index: 5;
}
.mobile_phone img:last-of-type{
    position: absolute;
    top: 30%;
    right:-13%;
}
.mobile_block .main_btn{
    font-weight: 700;
    font-size: 16px;
    line-height: 24px;
    text-decoration: none;
    color: white;
    margin-right: 30px;
    border: 1px white solid;
    border-radius: 25px;
    padding: 12px 47.5px;
    transition: 0.3s;
}
.mobile_block .main_btn:hover{
    background-color: rgba(255, 195, 0, 1);
    border: 1px rgba(255, 195, 0, 1) solid;
}
.oval:first-of-type{
    position: absolute;
    bottom: 0;
    left: 40%;
}
.oval:last-of-type{
    width: 150px;
    position: absolute;
    right: 0;
    bottom:0;
}




#second_cards{
    background-color: #fff;
    z-index: 20;
    padding-bottom: 123px;
}
.card_bottom{
    display: flex;
    width: 78%;
    margin: 0 auto;
}
.card_header{
    padding: 120px 11% 0;
}
.sec_card{
    position: relative;
    flex-basis: calc(100% / 4);
    height: 350px;
    overflow: hidden;
    border-radius: 10px;
    margin: 15px;
    box-shadow: 16px 16px 48px 0 rgba(0, 0, 0, 0.0995);
    padding: 26px 26px 0;
}
.sec_card h6{
    font-size: 12px;
    line-height: 24px;
    margin: 0 0 13px;
}
.sec_card h4{
    font-size: 20px;
    line-height: 26px;
    font-family: 'Poppins', sans-serif;
    margin: 0;
}
.sec_card .plus{
    left: 8% ;
    bottom: 4%;
}



#gradient{
    background-color: #fdf2ff;
    padding: 128px 11%;
}
.gradient h2{
    position: absolute;
    z-index: -10
    ;
}
#gradient p{
    margin: 0px;
    display: none;
    transition: 0.3s;
}
.gradient_block{
    display: flex;
}
.gradient img{
    width: 470px;
}
.gradient_bottom{
    margin-left: 100px;
    display: flex;
    justify-content: space-around;
    flex-direction: column;
}
.gradient_bottom label{
    font-size: 24px;
    line-height: 32px;
    font-family: 'Poppins', sans-serif;
}
.gradient_bottom label::after{
    content: url(./picture/gradient/down.png);
}

.gradient_bottom label:hover{
    border-bottom: 7px solid #C86DD7;
    display: inline-block;
    line-height: 0.70;
}
.gradient_bottom .lab_one{
    max-width: 195px;
}
.gradient_bottom .lab_two{
    max-width: 210px;
}
.gradient_bottom .lab_thre{
    max-width: 300px;
}
.gradient_bottom .lab_four{
    max-width: 165px;
}
.gradient_bottom .lab_five{
    max-width: 180px;
}
.gradient_bottom input{
    display: none;
}
#one:checked~.check_one{
    display: inline;
}
#two:checked~.check_two{
    display: inline;
}
#thre:checked~.check_thre{
    display: inline;
}
#four:checked~.check_four{
    display: inline;
}
#five:checked~.check_five{
    display: inline;
}



#hr{
    padding: 120px 11% 512px;
    background-image: url(./picture/HR/BG.png);
    background-repeat: no-repeat;
    background-color: rgba(48, 35, 174, 1);
}
.hr_cards{
    display: flex;
    justify-content: space-between;
}
.hr_card{
    flex-basis: calc (100% / 4);
    margin: 15px;
    background-color: #fff;
    border-radius: 5px;
}
.hr_card img{
    width: 220px;
    height: 238px;
}
.hr_card h4{
    color:rgba(51, 51, 51, 1);
    font-family: 'Poppins', sans-serif;
    font-size:22px;
    line-height: 30px;
    margin: 21px 0 11px 20px;
}
.hr_card p{
    color:rgba(51, 51, 51, 1);
    font-size:12px;
    line-height: 24px;
    margin: 0 0 25px 20px;
}
/* ... */

